<object> should be in form.elements. Bug 127847, r=jkeiser, sr=jst.